# openscad-assistive-forge

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  MAINTAINERS.md  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  SECURITY.md  TESTING_INSTRUCTIONS.md  TEST_REPORT.md  THIRD_PARTY_NOTICES.md  capture-console-logs.js  eslint.config.js  forge-manifest-braille.json  forge-manifest-volksswitch.json  forge-manifest-zip.json  forge-manifest.json  grid-printer-presets.validation-summary.md  index.html  multi_color_coff_parity.validation-summary.md  my_design.scad  my_presets.json  package-lock.json  package.json  pixi.toml  playwright.config.js  sbom.json  vite.config.js  vitest.config.js  wrangler.toml
forge-cad-to-parametric/: .gitignore  CREDITS.md  LICENSE  README.md  pyproject.toml
forge-cad-to-parametric/docs/: FORGE_INTEGRATION.md
forge-cad-to-parametric/examples/: plug_puller_walkthrough.md
forge-cad-to-parametric/forge_cad/: __init__.py  cli.py  pipeline.py
forge-cad-to-parametric/forge_cad/analyzer/: archetype_detect.py  boundary_detect.py  feature_detect.py  loader.py  pattern_detect.py  symmetry_detect.py  topology.py  variant_diff.py  z_profile.py
forge-cad-to-parametric/forge_cad/defaults/: __init__.py  accessibility.py  manufacturing.py
forge-cad-to-parametric/forge_cad/forms/: __init__.py  project_form.py  prompts.py
forge-cad-to-parametric/forge_cad/forms/templates/: project_template.yaml
forge-cad-to-parametric/forge_cad/generator/: __init__.py  customizer.py  module_builder.py  scad_emitter.py
forge-cad-to-parametric/forge_cad/generator/strategies/: __init__.py  assembly.py  base.py  box_enclosure.py  flat_plate.py  (+3 more)
forge-cad-to-parametric/forge_cad/utils/: __init__.py  coord_systems.py  eps_helper.py
forge-cad-to-parametric/forge_cad/validator/: __init__.py  manifold_check.py  mesh_compare.py
forge-cad-to-parametric/tests/: test_scad_emitter.py  test_variant_diff.py  test_z_profile.py
(+435 files in other folders)
